@@ -49,12 +49,15 @@
 #Q ?= # be verbose
 Q ?= @ # be quiet
 
-CC = sdcc
+SDCC_SRC=../..
+SDCC_BIN=../..
+
+CC = $(SDCC_BIN)/bin/sdcc
 LINKER = gplink
-USE_PIC16 ?= 1
+USE_PIC16 ?= 0
 ifeq ($(strip $(filter 1 yes,$(USE_PIC16))),)
 TARGETPIC = 16f877
-TARGETPIC = 16f84
+#TARGETPIC = 16f84
 CFLAGS = -mpic14 -p$(TARGETPIC)
 DIR = pic
 else
@@ -64,8 +67,8 @@ DIR = pic16
 endif
 CFLAGS += -Wl,-q
 CFLAGS += -Wl,--map
-CFLAGS += -I ../../device/include/$(DIR)
-CFLAGS += -L ../../device/lib/$(DIR)/bin
+CFLAGS += -I $(SDCC_SRC)/device/include/$(DIR)
+CFLAGS += -L $(SDCC_BIN)/device/lib/$(DIR)/bin
 #CFLAGS += --no-pcode-opt
 #CFLAGS += -V
 
@@ -108,6 +111,7 @@ SRC = add.c \
       configword.c \
       empty.c \
       for.c \
+      init0.c \
       inline.c \
       mult1.c \
       nestfor.c \
